# ChangeLog for x11-wm/openbox
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.72 2004/03/03 14:54:06 gustavoz Exp $

  03 Mar 2004; Gustavo Zacarias <gustavoz@gentoo.org> openbox-3.1.ebuild:
  stable on sparc

  29 Feb 2004; Brandon Hale <tseng@gentoo.org> openbox-3.1.ebuild:
  Keyword x86 for real this time.

  05 Jan 2004; Jason Wever <weeve@gentoo.org> openbox-3.0-r1.ebuild:
  Marked stable on sparc.

*openbox-3.1 (22 Dec 2003)

  22 Dec 2003; Brandon Hale <tseng@gentoo.org> openbox-3.1.ebuild:
  Version bump, thanks to SuperLag on freenode for his lightening fast report.

  14 Dec 2003; Lars Weiler <pylon@gentoo.org> openbox-3.0-r1.ebuild:
  Masked stable on ppc

  09 Dec 2003; Brandon Low <lostlogic@gentoo.org> openbox-3.0-r1.ebuild:
  ewan != ewarn

*openbox-3.0-r1 (07 Dec 2003)

  07 Dec 2003; Brandon Hale <tseng@gentoo.org> openbox-3.0-r1.ebuild:
  Removing 3 suffix from binary and session files.

  06 Dec 2003; Brandon Hale <tseng@gentoo.org> openbox-3.0.ebuild:
  Marking stable on x86.

  07 Nov 2003; Brandon Hale <tseng@gentoo.org> openbox-3.0.ebuild:
  Added some more usable themes for users with limited vision.

  06 Nov 2003; Brandon Hale <tseng@gentoo.org> openbox-3.0.ebuild:
  Bump and cleanup.

*openbox-3.0_rc4 (13 Oct 2003)

  13 Oct 2003; Brandon Hale <tseng@gentoo.org> openbox-3.0_rc2.ebuild,
  openbox-3.0_rc4.ebuild:
  Version bump.

*openbox-3.0_rc3 (09 Oct 2003)

  09 Oct 2003; Brandon Hale <tseng@gentoo.org> openbox-3.0_beta6.ebuild,
  openbox-3.0_rc1.ebuild, openbox-3.0_rc3.ebuild:
  Cleanup and bump.

*openbox-3.0_rc2 (03 Oct 2003)

  03 Oct 2003; Brandon Hale <tseng@gentoo.org> openbox-3.0_rc2.ebuild:
  Vesion bump.

*openbox-3.0_rc1 (29 Sep 2003)

  29 Sep 2003; Brandon Hale <tseng@gentoo.org> openbox-3.0_beta5.ebuild,
  openbox-3.0_rc1.ebuild:
  Version bump.

  26 Sep 2003; Jason Wever <weeve@gentoo.org> openbox-3.0_beta5.ebuild,