@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/openbox
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.72 2004/03/03 14:54:06 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.73 2004/03/07 23:22:20 tseng Exp $
+
+*openbox-3.1-r1 (07 Mar 2004)
+
+  07 Mar 2004; Brandon Hale <tseng@gentoo.org> openbox-3.1-r1.ebuild,
+  files/openbox.desktop:
+  Add .desktop file in preperation for new GDM, bug #40711
 
   03 Mar 2004; Gustavo Zacarias <gustavoz@gentoo.org> openbox-3.1.ebuild:
   stable on sparc
